--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ span {
   justify-content: center;
   background-color: var(--white);
   color: var(--black);
-  border-top: var(--orange) 5px solid;
+  border-top: var(--black) 5px solid;
 }
 .page_three {
   height: 100vh;
@@ -82,7 +82,7 @@ span {
   justify-content: center;
   background-color: var(--white);
   color: var(--black);
-  border-top: var(--orange) 5px solid;
+  border-top: var(--black) 5px solid;
 }
 .page_four {
   height: 100vh;
@@ -91,7 +91,7 @@ span {
   justify-content: center;
   background-color: var(--white);
   color: var(--black);
-  border-top: var(--orange) 5px solid;
+  border-top: var(--black) 5px solid;
 }
 .grid {
   width: 960px;
@@ -99,7 +99,7 @@ span {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  border: 2px solid var(--blue)
+  border: 2px solid var(--black)
 }
 .logo {
   position: fixed;
@@ -156,7 +156,6 @@ span {
   color: var(--black);
   transform: scale(1.1);
 }
-
 h1 {
   font-size: 90px;
   font-family: 'Nunito', sans-serif;
@@ -187,7 +186,6 @@ h1 {
   grid-column: 4 / 5;
   padding-right: 30px;
 }
-
 .page-down {
   grid-row: 5 / 6;
   grid-column: 2 / 4;
@@ -244,9 +242,6 @@ h1 {
   grid-column: 3 / 4;
   margin: 10px 40px;
 }
-
-
-
 .overlay1,.overlay2,.overlay3,.overlay4,.overlay5,.overlay6,.overlay7,.overlay8 p{
 padding-top: 36px;
 color: var(--off-white);
@@ -256,6 +251,11 @@ color: var(--off-white);
 }
 .projects{
   box-shadow: var(--shadow);
+}
+.coming-soon {
+  font-size: 12px;
+  text-align: center;
+padding-top: 35px;
 }
 .project-image1 {
   height: 80%;
@@ -374,11 +374,30 @@ color: var(--off-white);
   box-shadow: var(--orange-shadow-md);
 
 }
-
 /* --------------------------------------- */
-
 @media only screen and (max-width: 600px) {
 
 }
-
 @media (max-width:$screen-xs-max){}@media (min-width:$screen-sm){}@media (min-width:$screen-sm){}.modal .btn-close{color:#aaa;cursor:pointer;font-size:3rem;position:absolute;top:0;right:5px;text-decoration:none;}.modal .btn-close:hover,.modal .btn-close:focus{color:#999}.modal-wrap:before{content:'';display:none;background:rgba(0,0,0,0.6);position:fixed;top:0;right:0;bottom:0;left:0;z-index:101}.modal-overlay{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:102}.modal-open:checked ~ .modal-wrap:before,.modal-open:checked ~ .modal-wrap .modal-overlay{display:block}.modal-open:checked ~ .modal-wrap .modal-dialog{transform:translate(-50%,-50%);position:fixed;top:40%}.modal-dialog{background:#fefefe;border:#555 solid 1px;border-radius:5px;position:fixed;left:50%;top:-100%;transform:translate(-50%,-150%);transition:transform .6s ease-in-out;width:80%;max-width:600px;z-index:103}.modal-body{padding:20px;}.modal-body p{margin:0}.modal-header,.modal-footer{padding:20px 20px}.modal-header{border-bottom:#eaeaea solid 1px;}.modal-header h2{font-size:2rem;margin:0}.modal-footer{border-top:#eaeaea solid 1px;text-align:right}
+
+
+
+
+
+/* page 4 ------------------------------------------------------------ */
+.language-icons {
+  width: 80px;
+  height: 80px;
+  padding-left: 30px;
+}
+.icon-wrapper{
+  grid-row: 2 / 3;
+  grid-column: 3 / 4;
+  display: flex;
+  justify-content: space-around;
+}
+.skill-paragraph {
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+  margin-left: 50px;
+}
