--- a/index.css
+++ b/index.css
@@ -93,6 +93,14 @@ span {
   color: var(--black);
   border-top: var(--black) 5px solid;
 }
+.page_five {
+  height: 100vh;
+  width: 100vw;
+  color: var(--black);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .grid {
   width: 960px;
   height: 600px;
@@ -104,7 +112,7 @@ span {
 .logo {
   position: fixed;
   top:0px;
-  left: 50%;
+  left: 65%;
 }
 .navbar {
   position: fixed;
@@ -255,7 +263,7 @@ color: var(--off-white);
 .coming-soon {
   font-size: 12px;
   text-align: center;
-padding-top: 35px;
+  padding-top: 35px;
 }
 .project-image1 {
   height: 80%;
@@ -375,9 +383,7 @@ padding-top: 35px;
 
 }
 /* --------------------------------------- */
-@media only screen and (max-width: 600px) {
 
-}
 @media (max-width:$screen-xs-max){}@media (min-width:$screen-sm){}@media (min-width:$screen-sm){}.modal .btn-close{color:#aaa;cursor:pointer;font-size:3rem;position:absolute;top:0;right:5px;text-decoration:none;}.modal .btn-close:hover,.modal .btn-close:focus{color:#999}.modal-wrap:before{content:'';display:none;background:rgba(0,0,0,0.6);position:fixed;top:0;right:0;bottom:0;left:0;z-index:101}.modal-overlay{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:102}.modal-open:checked ~ .modal-wrap:before,.modal-open:checked ~ .modal-wrap .modal-overlay{display:block}.modal-open:checked ~ .modal-wrap .modal-dialog{transform:translate(-50%,-50%);position:fixed;top:40%}.modal-dialog{background:#fefefe;border:#555 solid 1px;border-radius:5px;position:fixed;left:50%;top:-100%;transform:translate(-50%,-150%);transition:transform .6s ease-in-out;width:80%;max-width:600px;z-index:103}.modal-body{padding:20px;}.modal-body p{margin:0}.modal-header,.modal-footer{padding:20px 20px}.modal-header{border-bottom:#eaeaea solid 1px;}.modal-header h2{font-size:2rem;margin:0}.modal-footer{border-top:#eaeaea solid 1px;text-align:right}
 
 
@@ -401,3 +407,81 @@ padding-top: 35px;
   grid-column: 3 / 4;
   margin-left: 50px;
 }
+
+/* page 5 ------------------------------------------------------------ */
+
+.contact-icons {
+  grid-row: 5 / 6;
+  grid-column: 4 / 5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+}
+
+.icon3 {
+  padding-left: 20px;
+}
+
+.icon3-text {
+  font-size: 12px;
+}
+
+@media only screen and (max-width: 750px) {
+  body {
+    font-size: 0.8rem;
+  }
+  h1 {
+    font-size: 70px;
+  }
+  .navbar .nav-items p {
+    margin-right: 30px;
+    padding: 4px;
+    font-size: 10px;
+    border-radius: 10%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  body {
+    font-size: 0.7rem;
+  }
+  h1 {
+    font-size: 70px;
+  }
+  .navbar .nav-items p {
+    margin-right: 30px;
+    padding: 4px;
+    font-size: 10px;
+    border-radius: 10%;
+  }
+}
+
+
+
+
+
+
+@media only screen and (min-width: 1440px) {
+  .grid {
+    width: 1300px;
+    height: 900px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    border: 2px solid var(--black)
+  }
+  body {
+    font-size: 1.3rem;
+  }
+  h1 {
+    font-size: 120px;
+  }
+  .navbar .nav-items p {
+    margin-right: 30px;
+    padding: 4px;
+    font-size: 16px;
+    border-radius: 10%;
+  }
+}
+
