--- a/index.css
+++ b/index.css
@@ -58,6 +58,9 @@ span {
   background-position: center;
   position: absolute;
 }
+.logo-mobile {
+  display:none;
+}
 .page_one {
   height: 100vh;
   width: 100vw;
@@ -65,6 +68,7 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .page_two {
   height: 100vh;
@@ -74,6 +78,7 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
+  position: relative;
 }
 .page_three {
   height: 100vh;
@@ -83,6 +88,7 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
+  position: relative;
 }
 .page_four {
   height: 100vh;
@@ -92,6 +98,7 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
+  position: relative;
 }
 .page_five {
   height: 100vh;
@@ -100,6 +107,7 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .grid {
   width: 960px;
@@ -442,12 +450,16 @@ color: var(--off-white);
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 500px) {
   body {
-    font-size: 0.7rem;
+    font-size: 1rem;
+  }
+  /* navbar */
+  .navbar {
+    display:none;
   }
   h1 {
-    font-size: 70px;
+    font-size: 50px;
   }
   .navbar .nav-items p {
     margin-right: 30px;
@@ -455,6 +467,119 @@ color: var(--off-white);
     font-size: 10px;
     border-radius: 10%;
   }
+  .grid {
+    width: 380px;
+    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    border: 2px solid var(--black)
+  }
+
+  .logo {
+    position: absolute;
+    top: 10;
+    right: 0;
+  }
+  .title1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 5;
+    padding-top: 30px;
+  }
+  .title2 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 5;
+  }
+  .title3 {
+    grid-row: 3 / 4;
+    grid-column: 1 / 5;
+  }
+  .title4 {
+    grid-row: 4 / 5;
+    grid-column: 1 / 5;
+  }
+  .intro {
+    text-align: right;
+    grid-row: 7 / 8;
+    grid-column: 2 / 4;
+    padding-right: 30px;
+  }
+/* page 2 ------------------------------------- */
+  .projects{
+    display: none;
+  }
+
+/* page 3 ------------------------------------- */
+.photo {
+  display: flex;
+  grid-row: 3 / 4;
+  grid-column: 2 / 4;
+}
+.photo img {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  border: 1px solid var(--blue);
+  box-shadow: none;
+
+}
+
+.about-me-text {
+  text-align: center;
+  grid-row: 7 / 8;
+  grid-column: 1 / 5;
+  margin-left: 30px;
+}
+
+/* page 4 ------------------------------------- */
+
+.language-icons {
+  width: 70px;
+  height: 70px;
+}
+.icon-wrapper{
+  grid-row: 3 / 5;
+  grid-column: 1 / 4;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 24px;
+}
+.skill-paragraph {
+  grid-row: 5 / 8;
+  grid-column: 2 / 4;
+  margin-left: 20px;
+}
+
+/* page 5 ------------------------------------- */
+.contact-icons {
+  grid-row: 8 / 9;
+  grid-column: 1 / 5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contact-me {
+  grid-row: 5 / 6;
+  grid-column: 3 / 5;
+}
+.icon3 {
+  padding-left: 20px;
+}
+
+.icon3-text {
+  font-size: 12px;
+}
+.logo-mobile {
+  display: block;
+  position: absolute;
+  top:60px;
+  right:11px;
+}
+
+.logo {
+  display:none;
+}
 }
 
 
