--- a/index.css
+++ b/index.css
@@ -68,7 +68,6 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 .page_two {
   height: 100vh;
@@ -78,7 +77,6 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
-  position: relative;
 }
 .page_three {
   height: 100vh;
@@ -88,7 +86,6 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
-  position: relative;
 }
 .page_four {
   height: 100vh;
@@ -98,7 +95,6 @@ span {
   background-color: var(--white);
   color: var(--black);
   border-top: var(--black) 5px solid;
-  position: relative;
 }
 .page_five {
   height: 100vh;
@@ -107,7 +103,6 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 .grid {
   width: 960px;
@@ -454,6 +449,24 @@ color: var(--off-white);
   body {
     font-size: 1rem;
   }
+  .page_one {
+    position: relative;
+  }
+
+  .page_two {
+    position: relative;
+  }
+
+  .page_three {
+    position: relative;
+  }
+
+  .page_four {
+    position: relative;
+  }
+  .page_five {
+    position: relative;
+  }
   /* navbar */
   .navbar {
     display:none;
@@ -477,10 +490,18 @@ color: var(--off-white);
   }
 
   .logo {
-    position: absolute;
-    top: 10;
-    right: 0;
+   display:none;
   }
+
+
+  .page_one .logo-mobile, .page_two .logo-mobile, .page_three .logo-mobile, .page_four .logo-mobile, .page_five .logo-mobile    {
+    position: absolute;
+    display: block;
+    top: 15px;
+    right: 30px;
+  }
+ 
+ 
   .title1 {
     grid-row: 1 / 2;
     grid-column: 1 / 5;
@@ -566,20 +587,142 @@ color: var(--off-white);
 .icon3 {
   padding-left: 20px;
 }
-
 .icon3-text {
   font-size: 12px;
 }
-.logo-mobile {
-  display: block;
-  position: absolute;
-  top:60px;
-  right:11px;
+
+.mobile-navbar {
+  display: inline;
 }
 
-.logo {
-  display:none;
-}
+#menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 50px;
+   left: 50px;
+   
+   z-index: 1;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0; /* hide this */
+   z-index: 2; /* and place it over the hamburger */
+   
+   -webkit-touch-callout: none;
+ }
+ 
+ /*
+  * Just a quick hamburger
+  */
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ /* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ /*
+  * But let's hide the middle one.
+  */
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ /*
+  * Ohyeah and the last one should go the other direction
+  */
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ /*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   /* to stop flickering of text in safari */
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+ 
+ /*
+  * And let's slide it in from the left
+  */
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
+
 }
 
 
