--- a/index.css
+++ b/index.css
@@ -339,21 +339,17 @@ color: var(--off-white);
   height: 200px;
   width: 300px;
 }
-
 .modal-body {
   display: flex;
   flex-direction: row;
 }
-
 .modal .about-app-heading {
   padding-left: 20px;
 }
-
 .modal .about-app {
   padding-left: 20px;
   font-size: 10px;
 }
-
 .modal .about-app-card {
   padding-bottom: 20px;
 }
@@ -363,7 +359,6 @@ color: var(--off-white);
   align-content: center;
   justify-content: flex-end;
 }
-
 .modal .app-links {
   padding-left: 20px;
   font-size: 25px;
@@ -387,7 +382,76 @@ color: var(--off-white);
 }
 /* --------------------------------------- */
 
-@media (max-width:$screen-xs-max){}@media (min-width:$screen-sm){}@media (min-width:$screen-sm){}.modal .btn-close{color:#aaa;cursor:pointer;font-size:3rem;position:absolute;top:0;right:5px;text-decoration:none;}.modal .btn-close:hover,.modal .btn-close:focus{color:#999}.modal-wrap:before{content:'';display:none;background:rgba(0,0,0,0.6);position:fixed;top:0;right:0;bottom:0;left:0;z-index:101}.modal-overlay{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:102}.modal-open:checked ~ .modal-wrap:before,.modal-open:checked ~ .modal-wrap .modal-overlay{display:block}.modal-open:checked ~ .modal-wrap .modal-dialog{transform:translate(-50%,-50%);position:fixed;top:40%}.modal-dialog{background:#fefefe;border:#555 solid 1px;border-radius:5px;position:fixed;left:50%;top:-100%;transform:translate(-50%,-150%);transition:transform .6s ease-in-out;width:80%;max-width:600px;z-index:103}.modal-body{padding:20px;}.modal-body p{margin:0}.modal-header,.modal-footer{padding:20px 20px}.modal-header{border-bottom:#eaeaea solid 1px;}.modal-header h2{font-size:2rem;margin:0}.modal-footer{border-top:#eaeaea solid 1px;text-align:right}
+
+.modal .btn-close{
+  color:#aaa;
+  cursor:pointer;
+  font-size:3rem;
+  position:absolute;
+  top:0;right:5px;
+  text-decoration:none;
+}
+.modal .btn-close:hover,.modal .btn-close:focus{
+  color:#999
+}
+.modal-wrap:before{
+  content:'';
+  display:none;
+  background:rgba(0,0,0,0.6);
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:101
+}
+.modal-overlay{
+  display:none;
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:102
+}
+.modal-open:checked ~ .modal-wrap:before,.modal-open:checked ~ .modal-wrap .modal-overlay{
+  display:block
+}
+.modal-open:checked ~ .modal-wrap .modal-dialog{
+  transform:translate(-50%,-50%);
+  position:fixed;top:40%;
+}
+.modal-dialog{
+  background:#fefefe;
+  border:#555 solid 1px;
+  border-radius:5px;
+  position:fixed;
+  left:50%;
+  top:-100%;
+  transform:translate(-50%,-150%);
+  transition:transform .6s ease-in-out;
+  width:80%;
+  max-width:600px;z-index:103;
+}
+.modal-body{
+  padding:20px;
+}
+.modal-body p{
+  margin:0;
+}
+.modal-header,.modal-footer{
+  padding:20px 20px;
+}
+.modal-header{
+  border-bottom:#eaeaea solid 1px;
+}
+.modal-header h2{
+  font-size:2rem;margin:0;
+}
+.modal-footer{
+  border-top:#eaeaea solid 1px;
+  text-align:right;
+}
 
 
 
@@ -449,24 +513,7 @@ color: var(--off-white);
   body {
     font-size: 1rem;
   }
-  .page_one {
-    position: relative;
-  }
 
-  .page_two {
-    position: relative;
-  }
-
-  .page_three {
-    position: relative;
-  }
-
-  .page_four {
-    position: relative;
-  }
-  .page_five {
-    position: relative;
-  }
   /* navbar */
   .navbar {
     display:none;
@@ -493,15 +540,92 @@ color: var(--off-white);
    display:none;
   }
 
-
-  .page_one .logo-mobile, .page_two .logo-mobile, .page_three .logo-mobile, .page_four .logo-mobile, .page_five .logo-mobile    {
-    position: absolute;
-    display: block;
-    top: 15px;
-    right: 30px;
+  .mobile-nav {
+    position: fixed;
+    margin: 0 auto;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+    width: 100%;
+    box-shadow: var(--shadow);
+    background: var(--blue);
+    opacity: 0.7;
   }
- 
- 
+
+  .mobile-nav .item-wrapper {
+    margin: 0 auto;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
+  /* items */
+  .mobile-nav .nav-items {
+    display: flex;
+    flex-direction: row;
+    color: var(--white);
+  }
+  .mobile-nav .nav-items a {
+    font-size: 12px;
+    border-radius: 10%;
+    color: var(--black);
+    margin: 0px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .mobile-nav .nav-items p:hover {
+    background: var(--white);
+    color: var(--black);
+    transform: scale(1.1);
+  }
+  /* Links */
+  .mobile-nav .links {
+    margin: 2px 20px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+  }
+  .mobile-nav .links a {
+    margin: 0 5px;
+    padding: 4px;
+    font-size: 14px;
+    color: var(--black);
+  }
+  .mobile-nav .links a:hover {
+    background: var(--white);
+    color: var(--black);
+    transform: scale(1.1);
+  }
+
+  .page_one .logo-mobile1{
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    margin-left: 50px;
+  }
+
+  .page_two .logo-mobile2 {
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    margin-left: 50px;
+  }
+  .page_three .logo-mobile3 {
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    margin-left: 50px;
+  }
+  .page_four .logo-mobile4 {
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    margin-left: 50px;
+  }
+  .page_five .logo-mobile5 {
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    margin-left: 50px;
+  }
   .title1 {
     grid-row: 1 / 2;
     grid-column: 1 / 5;
@@ -589,140 +713,6 @@ color: var(--off-white);
 }
 .icon3-text {
   font-size: 12px;
-}
-
-.mobile-navbar {
-  display: inline;
-}
-
-#menuToggle
- {
-   display: block;
-   position: relative;
-   top: 50px;
-   left: 50px;
-   
-   z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
- }
- 
- #menuToggle input
- {
-   display: block;
-   width: 40px;
-   height: 32px;
-   position: absolute;
-   top: -7px;
-   left: -5px;
-   
-   cursor: pointer;
-   
-   opacity: 0; /* hide this */
-   z-index: 2; /* and place it over the hamburger */
-   
-   -webkit-touch-callout: none;
- }
- 
- /*
-  * Just a quick hamburger
-  */
- #menuToggle span
- {
-   display: block;
-   width: 33px;
-   height: 4px;
-   margin-bottom: 5px;
-   position: relative;
-   
-   background: #cdcdcd;
-   border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0.55s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- /* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #232323;
- }
- 
- /*
-  * But let's hide the middle one.
-  */
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   opacity: 0;
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
- /*
-  * Ohyeah and the last one should go the other direction
-  */
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
- }
- 
- /*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
- #menu
- {
-   position: absolute;
-   width: 300px;
-   margin: -100px 0 0 -50px;
-   padding: 50px;
-   padding-top: 125px;
-   
-   background: #ededed;
-   list-style-type: none;
-   -webkit-font-smoothing: antialiased;
-   /* to stop flickering of text in safari */
-   
-   transform-origin: 0% 0%;
-   transform: translate(-100%, 0);
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
- }
- 
- #menu li
- {
-   padding: 10px 0;
-   font-size: 22px;
- }
- 
- /*
-  * And let's slide it in from the left
-  */
- #menuToggle input:checked ~ ul
- {
-   transform: none;
- }
-
 }
 
 
