--- a/index.css
+++ b/index.css
@@ -564,7 +564,12 @@ color: var(--off-white);
   body {
     font-size: 1rem;
   }
-
+  .project4 {
+    background: grey;
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    margin: 10px 25px;
+  }
   /* navbar */
   .navbar {
     display:none;
